# MaaS

./: .env  .env.example  Dockerfile  README.md  Submission.md  docker-compose.yml  hash.py  main.py  pyproject.toml  render.yaml  test_db.py  test_sdk.py
app/: main.py  readme.md
app/api/routes/: admin.py  benchmark.py  health.py  memories.py  webhooks.py
app/core/: auth.py  config.py  exceptions.py
app/db/: client.py  db_migration.sql
app/schemas/: memory.py
app/services/: email.py  embeddings.py  memory.py
demo_agent/: demo_agent.py
docs/: authentication.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: context.mdx  delete.mdx  list.mdx  search.mdx  store.mdx  update.mdx  wipe.mdx
docs/concept/: hybrid-scoring.mdx  memory-types.mdx
docs/guide/: error-handling.mdx  first-agent.mdx  langgraph.mdx
scripts/: setup_db.py
sdk/: LICENSE  README.md  pyproject.toml  set_up.py  setup.py
sdk/memlayer/: __init__.py  client.py
sdk/remem/: __init__.py  client.py
tests/: test_memory.py  test_stor_sec_embed.py
