[project]
name = "memlayer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "gunicorn>=26.0.0",
    "langchain-huggingface>=1.2.2",
    "numpy>=2.4.6",
    "slowapi>=0.1.9",
    "supabase>=2.30.0",
    "twine>=6.2.0",
    "uvicorn>=0.48.0",
    "openai==1.82.0",
    "build>=1.5.0",
    "httpx==0.28.1",
    "resend>=2.30.1",
    "python-dotenv>=1.2.2",
    "email-validator==2.1.1",
]

 